Binding pane switching in tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -5,3 +5,8 @@ set -g default-terminal "screen-256color"
 # ----------------------------------------------------
 bind | split-window -h
 bind - split-window -v
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
