Enable vi mode-keys, synchronize input

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,9 +1,8 @@
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 
-# ----------------------------------------------------
-# Key bindings
-# ----------------------------------------------------
+setw -g mode-keys vi
+
 bind | split-window -h
 bind - split-window -v
 
@@ -11,3 +10,5 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+bind s setw synchronize-panes
